--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <a href="En_QUIZ_Answer.html" id="a" class="C"></a>
 
     <br>
-    <a href="En_Quiz.html" id="a_2" class="C"></a>
+    <a href="index.html" id="a_2" class="C"></a>
 
 
 
